[project]
name = "test-workflow"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { email = "renardromain@hotmail.fr" }
]
requires-python = ">=3.9"
dependencies = []

[project.scripts]
test-workflow = "test_workflow:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"


[dependency-groups]
dev = [
    "mypy>=1.15.0",
    "pytest>=8.3.5",
    "pytest-cov>=6.1.1",
    "ruff>=0.11.4",
]
pre-commit = [
    "pre-commit-uv>=4.1.4; python_version >= '3.9'",
]
tox = [
    "tox-uv>=1.25.0; python_version >= '3.9'",
]
