[project]
name = "rr-test-workflow"
dynamic = ["version"]
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "RR5555-smurf", email = "renardromain@hotmail.fr" }
]
maintainers = [
    { name = "RR5555-smurf", email = "renardromain@hotmail.fr" }
]
requires-python = ">=3.9"
dependencies = []


[project.urls]
Repository = "https://github.com/RR5555-smurf/test_workflow"

[project.scripts]
test-workflow = "test_workflow:main"

[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "vcs"

[tool.hatch.version.raw-options]
version_scheme = "no-guess-dev"

[tool.hatch.build.hooks.vcs]
version-file = "__version__.py"

[dependency-groups]
dev = [
    "mypy>=1.15.0",
    "pytest>=8.3.5",
    "pytest-cov>=6.1.1",
    "ruff>=0.11.4",
]
pre-commit = [
    "pre-commit-uv>=4.1.4; python_version >= '3.9'",
]
tox = [
    "tox-uv>=1.25.0; python_version >= '3.9'",
]
